--- a/C++知识点总结/类的知识点总结.md
+++ b/C++知识点总结/类的知识点总结.md
@@ -156,7 +156,7 @@ A如果是B的友元类，则A的成员函数可以访问B的私有变量。
 
 ### 常量成员函数
 > 在类的成员函数说明后面可以加 const 关键字，则该成员函数成为常量成员函数
-常量成员函数执行期间 **不应该修改其所作用的对象**。因此，在常量成员函数中不能修改成员变量的值 **（静态成员变量除外）**，也不能调用同类的非常亮成员函数 **（静态成员函数除外）**。
+常量成员函数执行期间 **不应该修改其所作用的对象**。因此，在常量成员函数中不能修改成员变量的值 **（静态成员变量除外）**，也不能调用同类的非常量成员函数 **（静态成员函数除外）**。
 
 
 看下面的例子：
